test/compile-fail/variable-uninitialized.as
let value;
let value = value;  // error
