test/compile-fail/variable-uninitialized.stderr
[0;37mtest/compile-fail/variable-uninitialized.as:2.13-18: [0;31merror: [1;37muse of possibly uninitialized variable 'value'[0m
